--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9192
 
-spring.datasource.url=jdbc:mysql://localhost:3307/Lakshadweep_hotel
+spring.datasource.url=jdbc:mysql://localhost:3306/Lakshadweep_hotel
 spring.datasource.username=root
-spring.datasource.password=Aliza
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
